[gd_scene load_steps=4 format=3 uid="uid://dq2x871v2iwee"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_kcs4r"]
[ext_resource type="Texture2D" uid="uid://cduda41040rgx" path="res://Images/Cards/Test/cardBack_blue1.png" id="2_yyjwn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iffya"]
size = Vector2(140, 190)

[node name="Card" type="Node2D"]
script = ExtResource("1_kcs4r")

[node name="BG_Image" type="Sprite2D" parent="."]
texture = ExtResource("2_yyjwn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_iffya")

[node name="CardName" type="Label" parent="."]
offset_left = -63.0
offset_top = -88.0
offset_right = -16.0
offset_bottom = -65.0
text = "Name"

[node name="Cost" type="Node2D" parent="."]
position = Vector2(-63, 66)

[node name="Label" type="Label" parent="Cost"]
offset_right = 40.0
offset_bottom = 23.0
text = "Cost
"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
